Fix overflow and padding for index

--- a/blog/toc.css
+++ b/blog/toc.css
@@ -5,7 +5,8 @@ body {
     color: #111;
     font-size: 1.4rem;
     line-height: 2.0rem;
-    width: 100%;
+    width: 90%;
+    padding: 5%;
 }
 
 
@@ -13,6 +14,7 @@ body {
     body {
         width: 800px;
         margin: auto;
+        padding: none;
     }
 }
 
