--- a/blog/tufte.css
+++ b/blog/tufte.css
@@ -224,13 +224,12 @@ h1 > code, h2 > code, h3 > code { font-size: 0.80em; }
 .marginnote > code, .sidenote > code { font-size: 1rem; }
 
 pre.code { font-size: 0.9rem;
-           overflow-x: auto;
+           overflow-x: none;
             width: 92.5%;
            margin-left: 2.5%;}
 
 @media only screen and (min-width: 800px) {
     pre.code {
-        overflow-x: none;
         width: 52.5%;
     }
 }
